--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,23 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
+<!DOCTYPE html>
+<html>
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+  <head>
+    <title>Elchin's hobby page</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  </head>
+  
+<body>
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+<h1>Welcome to my hobby website</h1>
+  <h2>About me</h2>
+  <p>Hey, my name is Elchin. I like Tech and Coding and Music and Reading, and Astronomy, and ...</p>
+  <p>You can join my discord https://join.datorium.eu/dicord</p>
+  
+  <h2>My hobby</h2>
+  <p>I like music and playing musical instruments</p>
+  
+  <h2>Community</h2>  
+  <p>I have support cool and techy community Datorium. Welcome to join us!</p>
+
+</body>
+</html>
